--- a/about-me.html
+++ b/about-me.html
@@ -55,7 +55,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html">Work</a></li>
+        <li><a id="work" href="/work.html">Work</a></li>
       </ul>
    </nav>
 
@@ -73,17 +73,20 @@
    </div>
   <div class="aboutmemain">
     <p>
-      The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University.<blockquote> The professor referenced a study researchers conducted on the warning systems
-        in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was far more effective if it stated “Pull Up” rather than “Ground Proximity”. This seemingly simple change in the design of these warning
+      The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University
+      .<blockquote> The professor referenced a study researchers conducted on the warning systems
+        in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was
+        far more effective if it stated “Pull Up” rather than “Ground Proximity”.
+        This seemingly simple change in the design of these warning
          systems, based on user preferences, changed the airline industry forever.</blockquote>
-         <p>This story has stuck with me as I’ve always been cognizant of how changes in design can greatly improve the human condition. Prior to making the decision to pursue UX design,
-          and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries. I’ve held a variety of positions, including: a manager of a restaurant, a server, an English
-          teacher, a social worker and a school-based therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I stumbled into UX Design when I was struck by the fact that those I worked with were being
-          asked to use systems that were impractical for the tasks at hand. I began thinking back to the other jobs I’d held and the frustrations met in each. I thought about the technology that had both customers and employees frustrated and exhausted. Despite the numerous
-           trainings provided, the issue was that these applications, these products weren’t user friendly. That’s when I knew that I wanted to make designs for those in the trenches of our most vital industries.That’s when I knew I wanted to advocate for the user experience.
-           My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.<br>
-           <a href="/documents/ImaniRicks_052020.pdf"> Download my resume </a></p>
-    <h2>My Skills:</h2>
+         <p>This story has stuck with me as I’ve always been cognizant of how changes in design can greatly improve the human condition.
+          Prior to making the decision to pursue UX design,
+          and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries.
+          I’ve held a variety of positions, including: restuarant manager, waitress, English
+          teacher, a social worker and therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I decided on a career in UX Design when I was struck by the fact that those I worked with were being
+          asked to use systems that were impractical for the tasks at hand. I want to make designs for those in the trenches of our most vital industries and advocate for the user experience.<br></p>
+
+    <h2>My skills:</h2>
     <ul class="skills">
       <li>Surveys</li>
       <li>Persona building</li>
@@ -91,18 +94,19 @@
       <li>Journey Mapping</li>
       <li>Prototyping</li>
       <li>Color Theory & Typography</li>
-      <li>HTML</li>
-      <li>JavaScript</li>
-      <li>CSS3</li>
     </ul>
-    <h2>My Favorite Tools:</h2>
+    <h2>My favorite tools:</h2>
     <ul class="tools">
-      <li>Figma</li>
-      <li>InVision Studio</li>
-      <li>Git</li>
-      <li>Chrome Dev Tools</li>
+      <li><i class="fab fa-figma fa-3x"></i></li>
+      <li><i class="fab fa-invision fa-3x"></i></li>
+      <li><i class="fab fa-github-square fa-3x"></i></li>
+      <li><i class="fab fa-html5 fa-3x"></i></li>
+      <li><i class="fab fa-css3-alt fa-3x"></i></li>
+      <li><i class="fab fa-adobe fa-3x"></i></li>
     </ul>
+      <a href="/documents/designresume.pdf" class="button"> Download my resume </a>
   </div>
+
 
 
   <!-- connect with me -->
