--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <img src="images/Work/smartmockups_trove1.png" class="" alt="">
           <div class="project_info2">
           <h4>Trove Project</h4>
-          <p>"Trove" is my design for a new cloud storage application<br> that incorporates both storage and user collaboration.</p>
+          <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
            </div>
           </div>
@@ -116,17 +116,20 @@
          </div>
         </div>
       </section>
-     <!-- designprocess -->
 
-      <section class="design_process">
-          <br>
-          <br>
-          <div>
-          <aside class="designpic">
-          <img class="design" src="images/designprocess.svg" alt="design process image">
-           </aside>
+
+
+     <!-- designprocess -->
+     <section class="design">
+      <div class="project">
+        <div class="project_section">
+        <div class="project_content">
+          <img src="images/designprocess.svg" class="" alt="">
+          </div>
          </div>
-        </section>
+        </div>
+      </section>
+
 
  <!-- connect with me -->
    <section class="connect">
