--- a/work.html
+++ b/work.html
@@ -57,45 +57,93 @@
         <li><a id="work" href="/work.html">Work</a></li>
       </ul>
    </nav>
-
-
    <!-- main content -->
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="gallery">
-    <div class="thumbnail-1 wow fadeInLeft">
-      <img src="images/Work/smartmockups_kby2urq9.jpg" alt="Trove" />
-      <div class="caption">
-        <h3 class="wow fadeInUp">Trove</h3>
-      </div>
-    </div>
-    <div class="large-1 wow bounceInLeft">
-      <img src="images/Work/smartmockups_kby2urq9.jpg" alt="" />
-      <span class="close">&#x2715;</span>
-    </div>
-    <div class="thumbnail-2 wow fadeInDown">
-      <img src="images/Work/smartmockups_busybus.jpg" alt="" />
-      <div class="caption">
-        <h3 class="wow fadeInUp">BusyBus</h3>
-      </div>
-    </div>
-    <div class="large-2 wow bounceInDown">
-      <img src="images/Work/smartmockups_busybus.jpg" alt="" />
-      <span class="close">&#x2715;</span>
-    </div>
-    <div class="thumbnail-3 wow fadeInRight">
-      <img src="images/Work/smartmockups_medchat.jpg" alt="" />
-      <div class="caption">
-        <h3 class="wow fadeInUp">MedChat</h3>
-      </div>
-    </div>
-    <div class="large-3 wow bounceInRight">
-      <img src="images/Work/smartmockups_medchat.jpg" alt="" />
-      <span class="close">&#x2715;</span>
-    </div>
-  </div>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+
+   <div id="myBtnContainer">
+     <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+     <button class="btn" onclick="filterSelection('nature')"> Desktop</button>
+     <button class="btn" onclick="filterSelection('cars')"> Mobile</button>
+     <button class="btn" onclick="filterSelection('people')"> Branding</button>
+   </div>
+
+   <!-- Portfolio Gallery Grid -->
+   <div class="row">
+     <div class="column nature">
+       <div class="content">
+         <img src="images/Work/smartmockups_kby2urq9.jpg" alt="Mockup" width="100%">
+         <h5>Trove</h5>
+         <p>Cloud storage application</p>
+       </div>
+     </div>
+     <div class="column cars">
+       <div class="content">
+         <img src="images/Work/smartmockups_busybus.jpg" alt="Mockup" width="100%">
+         <h5>BusyBus</h5>
+         <p>Transportation application</p>
+       </div>
+     </div>
+     <div class="column cars">
+       <div class="content">
+       <img src="images/Work/smartmockups_medchat.jpg" alt="Mockup" width="100%">
+         <h5>MedChat</h5>
+         <p>Patient portal application</p>
+       </div>
+     </div>
+
+   <!-- END GRID -->
+   </div>
+
+   <script>
+   filterSelection("all")
+   function filterSelection(c) {
+     var x, i;
+     x = document.getElementsByClassName("column");
+     if (c == "all") c = "";
+     for (i = 0; i < x.length; i++) {
+       w3RemoveClass(x[i], "show");
+       if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+     }
+   }
+
+   function w3AddClass(element, name) {
+     var i, arr1, arr2;
+     arr1 = element.className.split(" ");
+     arr2 = name.split(" ");
+     for (i = 0; i < arr2.length; i++) {
+       if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
+     }
+   }
+
+   function w3RemoveClass(element, name) {
+     var i, arr1, arr2;
+     arr1 = element.className.split(" ");
+     arr2 = name.split(" ");
+     for (i = 0; i < arr2.length; i++) {
+       while (arr1.indexOf(arr2[i]) > -1) {
+         arr1.splice(arr1.indexOf(arr2[i]), 1);
+       }
+     }
+     element.className = arr1.join(" ");
+   }
+
+
+   // Add active class to the current button (highlight it)
+   var btnContainer = document.getElementById("myBtnContainer");
+   var btns = btnContainer.getElementsByClassName("btn");
+   for (var i = 0; i < btns.length; i++) {
+     btns[i].addEventListener("click", function(){
+       var current = document.getElementsByClassName("active");
+       current[0].className = current[0].className.replace(" active", "");
+       this.className += " active";
+     });
+   }
+   </script>
 
 
     <!-- connect with me -->
