--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html">Work</a></li>
+        <li><a id="work" href="/work.html">Work</a></li>
       </ul>
    </nav>
 
@@ -214,7 +214,7 @@
          <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
-  
+
     <!-- footer -->
       <footer class="footer">
         <ul class="socialmedia">
