Changed work pictures

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/work.html">Work</a></li>
+        <li><a id="work" href="/index.html">Work</a></li>
       </ul>
    </nav>
    <br>
