--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/work.html">Work</a></li>
+        <li><a id="work" href="/index.html#worksection">Work</a></li>
       </ul>
    </nav>
-
 <!-- hero image -->
 	 <section class="hero">
      <br>
@@ -71,66 +70,30 @@
 		     <p>UX/UI Designer | Charlotte, NC</p>
          <i class="fas fa-angle-double-down fa-2x"></i>
        </section>
-   <!-- main content -->
+<!-- Main section -->
     <div class="main">
-      <!-- Capstone Project -->
-      <section class="medchatproject">
-       <div class="project">
-         <div class="project_content">
-           <img src="images/Work/smartmockups_medchat1.png" class="" alt="">
-           <div class="project_info">
-           <h4>MedChat</h4>
-           <p>"MedChat" is my idea for a a patient-portal application.</p>
-           <a href="" target="_blank" class="button">Coming Soon</a>
-         </div>
-        </div>
-      </div>
-     </section>
-     <!-- Trove project -->
-     <section class="troveproject">
-      <div class="project">
-        <div class="project_section">
-        <div class="project_content">
-          <img src="images/Work/smartmockups_trove1.png" class="" alt="">
-          <div class="project_info2">
-          <h4>Trove Project</h4>
-          <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
-          <a href="/project.html" target="_blank" class="button">Case study</a>
-           </div>
-          </div>
-         </div>
-        </div>
-      </section>
-     <!-- BusyBusy Project -->
-     <section class="busproject">
-      <div class="project">
-        <div class="project_section">
-        <div class="project_content">
-          <img src="images/Work/smartmockups_busybus1.png" class="" alt="">
-          <div class="project_info">
-          <h4>BusyBus</h4>
-          <p>"BusyBus" is my design for a transportation application that provides clearer information for users.</p>
-          <a href="/busybus.html" target="_blank" class="button">Case study</a>
-          </div>
-          </div>
-         </div>
-        </div>
-      </section>
-
-
-
-     <!-- designprocess -->
-     <section class="design">
-      <div class="project">
-        <div class="project_section">
-        <div class="project_content">
-          <img src="images/designprocess.svg" class="" alt="">
-          </div>
-         </div>
-        </div>
-      </section>
-
-
+     <h3>My Work</h3>
+     <div id="worksection" class="projects">
+     <div class="project_content">
+     <aside class="trove">
+       <a href="/project.html"><img src="images/newtrove.svg" class="trovepic" alt="mockup"></a>
+     </aside>
+       </div>
+     <div class="project_content">
+     <aside class="busybus">
+      <a href="/busybus.html"><img src="/images/bzybus.svg" class="trovepic" alt="mockup"></a>
+     </aside>
+       </div>
+     </div>
+<!-- designprocess -->
+     <div class="design_process">
+         <br>
+         <br>
+         <h3>My Design Process</h3>
+         <aside class="designpic">
+         <img class="design" src="images/designprocess.svg" alt="design process image">
+          </aside>
+    </div>
  <!-- connect with me -->
    <section class="connect">
      <br>
@@ -141,8 +104,7 @@
       <p>Please reach out if you want to chat or have any questions!</p>
       <a href="/contact.html" class="button">Message me</a>
     </section>
-
-    <!-- footer -->
+<!-- footer -->
       <footer class="footer">
         <ul class="socialmedia">
          <li><a href="/contact.html" target="_blank"><i class="fas fa-envelope-square fa-2x"></i></a></li>
