Added profile pic

--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
      </aside>
        </div>
      </div>
+     <!-- aboutme -->
+     <div class="myinfo">
+         <br>
+         <br>
+         <aside class="myinfo">
+         <img class="design" src="images/koreapic.JPG" alt="design process image">
+          </aside>
+         <div class="info_content">
+           <p>Welcome! My name is Imani and I'm a Designer with a background in Psychology.
+             My years of experience in mental health have contributed to my ability to
+             to view design problems through a user-centered, empathetic lens. My passion is
+             designing creative solutions for people by utilizing user research and ux best practices.
+          </p>
+            <a href="/aboutme.html" class="button">More about me</a>
+         </div>
+     </div>
 <!-- designprocess -->
      <div class="design_process">
          <br>
@@ -94,6 +110,8 @@
          <img class="design" src="images/designprocess.svg" alt="design process image">
           </aside>
     </div>
+
+
  <!-- connect with me -->
    <section class="connect">
      <br>
