--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
              to view design problems through a user-centered, empathetic lens. My passion is
              designing creative solutions for people by utilizing user research and ux best practices.
           </p>
-            <a href="/aboutme.html" class="button">More about me</a>
+            <a href="/about-me.html" class="button">More about me</a>
          </div>
      </div>
 <!-- designprocess -->
