--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </head>
 
 <body>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-up fa-2x"></i></button>
  <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
@@ -93,7 +94,7 @@
          <img class="design" src="images/koreapic.JPG" alt="design process image">
           </aside>
          <div class="info_content">
-           <p>Welcome! My name is Imani and I'm a Designer with a background in Psychology.
+           <p>Welcome!<br> My name is Imani and I'm a Designer with a background in Psychology.
              My years of experience in mental health have contributed to my ability to
              to view design problems through a user-centered, empathetic lens. My passion is
              designing creative solutions for people by utilizing user research and ux best practices.
@@ -133,7 +134,28 @@
         <p>Designed and Developed by Imani Ricks 2020</p>
       </footer>
     </div>
+<!-- button on scroll -->
+    <script>
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
 
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+    </script>
     </body>
 
     </html>
