--- a/medchat.html
+++ b/medchat.html
@@ -82,7 +82,7 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/busybus/busybusmockup.png" alt="product mockup" class="busmockup">
+      <img src="images/Work/smartmockups_medchat1.png" alt="product mockup" class="busmockup">
       <br>
     </section>
     <!-- discovery -->
@@ -92,7 +92,7 @@
          how users felt about their current patient portal applications, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/busybus/survey.png" alt="user survey image" class="buscenter">
+        <img src="images/medchat/medchatsurvey.svg" alt="user survey image" class="buscenter">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
@@ -125,13 +125,13 @@
           <p>The first user persona is health-conscious and likes to make sure she’s on top of tests.
              She wants to be able to check her app for upcoming appointments and test results.
             She’s a bit frustrated that she can’t download or print her test results.</p>
-          <img src="images/trove/user2.png" alt="user persona image" class="center">
+          <img src="images/medchat/user1.png" alt="user persona image" class="center">
           <p>The second user persona represents a busy mom, who has several schedules that she needs to coordinate. This user also wants to be able to change
             profiles within any app to make appointments and check on messages for her children. </p>
-          <img src="images/trove/user1.png" alt="user persona image" class="center">
+          <img src="images/medchat/user2.png" alt="user persona image" class="center">
           <p>The third user persona is an older male. This user would like to be able to integrate
              the information from his weekly exercises into his medical app.</p>
-          <img src="images/trove/user1.png" alt="user persona image" class="center">
+          <img src="images/medchat/user3.png" alt="user persona image" class="center">
          </section>
     <!-- user stories -->
     <section>
@@ -140,7 +140,7 @@
         I compiled a list of tasks that MedChat users would want to complete and rated them from high to low priority.
         I used the high and medium priority level user
         stories as guides to create the user flows and the wireframes of the application. </p>
-      <img src="images/trove/userstories.png" alt="user stories image" class="center">
+      <img src="images/medchat/Screenshot 2020-07-08 14.02.22.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <div class="userflow">
@@ -155,9 +155,9 @@
         <li>Process for checking test results</li>
         </ol>
         <br>
-        <img src="images/trove/userflow1.png" alt="user flows image" class="user">
-        <img src="images/trove/userflow2.png" alt="user flows image" class="user">
-        <img src="images/trove/userflow3.png" alt="user flows image" class="user">
+        <img src="images/medchat/User_Calendar_Flow.png" alt="user flows image" class="user">
+        <img src="images/medchat/User_Login_Flow.png" alt="user flows image" class="user">
+        <img src="images/medchat/User_Test_Flow.png" alt="user flows image" class="user">
           </div>
     <div>
   <!-- wireframe -->
@@ -178,7 +178,7 @@
          Users also preferred a Cinzel Decorative/Muli font pairing.
          Finally, users preferred wider width CTA buttons on the login and sign up pages.</p>
 
-       <img src="images/trove/surveygraph.png" alt="preference graph" class="graph">
+       <img src="images/medchat/piechart.png" alt="preference graph" class="graph">
          <p>83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
        </section>
    <!-- branding-->
@@ -245,7 +245,6 @@
            </ul>
            <p>Designed and Developed by Imani Ricks 2020</p>
          </footer>
-       </div>
        <!-- button on scroll -->
            <script>
            //Get the button
