--- a/busybus.html
+++ b/busybus.html
@@ -80,17 +80,19 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/busybus/busybusmockup.png" alt="product mockup" class="busmockup">
+      <img src="images/Work/smartmockups_busybus1.png" alt="final design" class="busprototype2">
+      <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
       <br>
     </section>
     <!-- discovery -->
-    <section class="discovery">
+    <section class="busystyle">
       <h2>Discovery Phase:</h2>
       <p> I conducted a survey with transit app users that provided insight into user preferences.
         Some key findings:Users appreciate having real time data, a location map, and viewing full schedules
         Users don’t appreciate unnecessary ads and unreliable notifications.</p>
         <aside>
-        <img src="images/busybus/survey.png" alt="user survey image" class="buscenter">
+        <img src="images/busybus/bussurvey3.png" alt="user survey image">
+        <img src="images/busybus/bussurvey2.png" alt="user survey image">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
@@ -107,6 +109,10 @@
       <img src="images/busybus/sketch1.png" alt="prototype" class="busprototype">
       <a href="https://www.dropbox.com/s/jln6v9rd5yeytzz/Screenshot%202020-01-13%2020.25.57.png?dl=0" target="_blank" class="button">View more</a>
        </section>
+       <section class="busystyle">
+         <h2>Branding and Identity:</h2>
+         <img src="images/BusyBusstyle.jpg" alt="branding">
+          </section>
     <section class="usability">
       <h2>Usability Tests:</h2>
       <p>After creating the initial sketches, I decided to test three users on the flow of the application. The feedback users gave was that the icons on the application could use more clarity,
@@ -131,14 +137,13 @@
       <h2>Final Design:</h2>
       <p>With the final design of BusyBus, I decided to incorporate some more feedback I recieved. I created a visual alert (red) for incoming buses.
         I also adjusted the visual hierarchy of the bus numbers and route names.</p>
-      <img src="images/busybus/finalversion.png" alt="final design" class="busfinal">
+      <img src="images/Work/smartmockups_busybus1.png" alt="final design" class="busprototype2">
       <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
     <section>
       <h2>Conclusion:</h2>
-      <p>My final design for BusyBus stuck to my original purpose: to help users find important information in an easy-to-digest way.
-        The next step I would like to take with this design would be creating a brand identity.</p>
+      <p>My final design for BusyBus stuck to my original purpose: to help users find important information in an easy-to-digest way.</p>
       </section>
     </div>
     <!-- connect with me -->
