Update profile pic

--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,19 @@
 </head>
 
 <body>
-   <!-- nav bar -->
-  <nav class="navbar">
-      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></a>
-    <ul>
-        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
-        <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html">Work</a></li>
-      </ul>
-   </nav>
+  <!-- nav bar -->
+ <nav class="navbar">
+   <div>
+     <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
+   </div>
+   <div class="navbarlinks">
+   <ul>
+       <li><a id="contact_nav" href="/contact.html">Contact</a></li>
+       <li><a id="about_me" href="/about-me.html">About</a></li>
+       <li><a id="work" href="/index.html#worksection">Work</a></li>
+     </ul>
+   </div>
+  </nav>
    <br>
    <br>
    <br>
