--- a/index.html
+++ b/index.html
@@ -52,12 +52,16 @@
  <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
+    <div>
       <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
+    </div>
+    <div class="navbarlinks">
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
         <li><a id="work" href="/index.html#worksection">Work</a></li>
       </ul>
+    </div>
    </nav>
 <!-- hero image -->
 	 <section class="hero">
@@ -91,7 +95,7 @@
          <br>
          <br>
          <aside class="myinfo">
-         <img class="design" src="images/koreapic.JPG" alt="design process image">
+         <img class="design" src="images/meupclose.jpeg" alt="design process image">
           </aside>
          <div class="info_content">
            <p>Welcome!<br> My name is Imani and I'm a Designer with a background in Psychology.
