--- a/about-me.html
+++ b/about-me.html
@@ -52,14 +52,17 @@
  <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
+    <div>
       <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
+    </div>
+    <div class="navbarlinks">
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html">Work</a></li>
+        <li><a id="work" href="/index.html#worksection">Work</a></li>
       </ul>
+    </div>
    </nav>
-
 <!-- hero image -->
   <div id="aboutmehero">
 	  <section class="aboutmehero">
