--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
        </section>
 <!-- Main section -->
     <div class="main">
+      
      <h3>My Work</h3>
      <div id="worksection" class="projects">
      <div class="project_content">
@@ -89,6 +90,11 @@
       <a href="/busybus.html"><img src="/images/bzybus.svg" class="trovepic" alt="mockup"></a>
      </aside>
        </div>
+     <div class="project_content">
+      <aside class="medchat">
+        <a href="/medchat.html"><img src="images/medchat/medchatmockup1.svg" class="trovepic" alt="mockup"></a>
+      </aside>
+      </div>
      </div>
      <!-- aboutme -->
      <div class="myinfo">
