--- a/medchat.html
+++ b/medchat.html
@@ -69,12 +69,11 @@
     <br>
     <br>
     <br>
-    <img src="images/busybus/yellowbus.png" alt="mockup image" class="projecthero" >
+    <img src="images/Work/smartmockups_medchat.jpg" alt="mockup image" class="projecthero" >
     <h3>MedChat summary</h3>
-    <p>Patient portal applications are the next step in providing wraparound services for those in the medical and mental health fields.
-      They allow users to access information in a secure format from their personal devices. My goal was to take the current applications on the market,
-      and redesign them to create a more user friendly experience. .<p>
-    <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
+    <p>My goal was to take the current patient portal applications on the market,
+      and redesign them to create a more user friendly experience.<p>
+    <a href="https://invis.io/FRXPC3YG5JC" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- problem and solution-->
   <div class="projectmain">
@@ -85,7 +84,7 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/Work/smartmockups_medchat1.png" alt="product mockup" class="busmockup">
+      <img src="images/Work/smartmockups_medchat1.png" alt="product mockup" class="medchatmockup">
       <br>
     </section>
     <!-- discovery -->
@@ -102,35 +101,24 @@
       <!-- competitive analysis -->
       <section>
         <h2>Competitive Analysis:</h2>
-          <p >Google has many products to offer its users through its Drive platform.
-            They have built-in templates for surveys, documents, spreadsheets,
-             and presentations. They also provide several tools for users to edit content with.</p>
-             <img src="images/trove/googledrivre.png"  alt="google drive image" class="center"><br>
-          <br><p> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications.
-            The application also has the option of administration control for
-           business users.</p>
-           <img src="images/trove/dropbox.png"  alt="dropbox image" class="center"><br>
-           <br><p> Pinterest allows users to “Pin”
-           images or ideas they find on websites to their boards. They also provide
-           users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
-            scrolling. </p>
-            <img src="images/trove/pinterest.png"  alt="pinterest image" class="center"><br>
-            <a href="https://docs.google.com/document/d/1xJg4TUPONXPYxAXBafxe4DKsNYSO1RyiBYnhi0jO21c/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
+        <p>I conducted an analysis on three popular applications in the patient portal market: MyChart,
+          FollowMyHealth and healow. I found that an opportunity exists in this market for
+          an application that could take some of the most popular features of the MyChart
+           application and cut out some of the unnecessary features.
+        </p>
+        <img src="images/medchat/Screenshot 2020-07-22 21.28.15.png" alt="user survey image" class="medchatmockup">
+            <a href="https://docs.google.com/document/d/1kF1auQUzz9Y78F0U1aUMGWyYD7WaEPXr03TKNxQtFBQ/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
        </section>
       <!-- user personas -->
       <section>
         <h2>User Personas:</h2>
           <p>I was able to craft user personas based on the information gathered in the survey. Demographically,
             the respondents were majority female (80%), and aged between 25-54 (80%).
-            Respondents reported living in smaller cities and towns, mostly in the southeastern
-            United States. Most respondents reported their
-             professions as being teachers, professors, students or therapists. </p>
+           </p>
           <p>The first user persona is health-conscious and likes to make sure she’s on top of tests.
-             She wants to be able to check her app for upcoming appointments and test results.
             She’s a bit frustrated that she can’t download or print her test results.</p>
           <img src="images/medchat/user1.png" alt="user persona image" class="center">
-          <p>The second user persona represents a busy mom, who has several schedules that she needs to coordinate. This user also wants to be able to change
-            profiles within any app to make appointments and check on messages for her children. </p>
+          <p>The second user persona represents a busy mom, who has several schedules that she needs to coordinate. </p>
           <img src="images/medchat/user2.png" alt="user persona image" class="center">
           <p>The third user persona is an older male. This user would like to be able to integrate
              the information from his weekly exercises into his medical app.</p>
@@ -140,86 +128,79 @@
     <section>
       <h2>Information Architecture:</h2>
       <p>The user stories were created by gathering data from the user survey responses, the competitive analysis and the user personas.
-        I compiled a list of tasks that MedChat users would want to complete and rated them from high to low priority.
-        I used the high and medium priority level user
-        stories as guides to create the user flows and the wireframes of the application. </p>
+        I used these to create the user flows and the wireframes of the application. </p>
       <img src="images/medchat/Screenshot 2020-07-08 14.02.22.png" alt="user stories image" class="center">
-      <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
+      <a href="https://docs.google.com/spreadsheets/d/19FFi336tp-7AefScqzLHkzyhhFTLIohiuIsehttFe1s/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
+   <!-- user flows-->
     <div class="userflow">
-  <!-- user flows-->
       <h2>User Flows:</h2>
       <p>I created three user flows for the application:</p>
-        <ol>
-        <li>Process for logging in</li>
-        <li>Process for signing up</li>
-        <li>rocess for sending messages</li>
-        <li>Process for making an appointments</li>
-        <li>Process for checking test results</li>
-        </ol>
         <br>
         <img src="images/medchat/User_Calendar_Flow.png" alt="user flows image" class="user">
         <img src="images/medchat/User_Login_Flow.png" alt="user flows image" class="user">
         <img src="images/medchat/User_Test_Flow.png" alt="user flows image" class="user">
           </div>
-    <div>
   <!-- wireframe -->
   <section class="wireframes">
     <h2>Sketches and Wireframes:</h2>
     <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-    <img src="images/trove/trove_sketch1.jpg" alt="wireframe image" class="wireframeimage">
-    <img src="images/trove/trove_sketch2.jpg" alt="wireframe image" class="wireframeimage">
-    <img src="images/trove/wireframe2.png" alt="wireframe image" class="wireframeimage">
-    <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
+    <img src="images/medchat/medchatsketch.jpg" alt="wireframe image" class="wireframeimage">
+    <img src="images/medchat/medchatsketch2.jpg" alt="wireframe image" class="wireframeimage">
+    <a href="https://invis.io/QPXQQCC59XR" target="_blank" class="button">View more</a>
      </section>
   <!-- preference testing -->
-     <section>
+     <section class="userflow">
        <h2>Preference Tests:</h2>
        <p>I conducted a preference test for three different elements in my design.
-         The first element was the background color for the log-in screen.The feedback that I recieved was that users preferred
-         a neutral background to a white background.
-         Users also preferred a Cinzel Decorative/Muli font pairing.
-         Finally, users preferred wider width CTA buttons on the login and sign up pages.</p>
-
-       <img src="images/medchat/piechart.png" alt="preference graph" class="graph">
-         <p>83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
+         The first element was the background color for the log-in screen.</p>
+         <img src="images/medchat/Homepage1.png" alt="screen" class="user">
+         <img src="images/medchat/Homepage2.png" alt="screen" class="user">
+         <img src="images/medchat/Homepage3.png" alt="screen" class="user">
+         <aside>
+         <img src="images/medchat/piechart.png" alt="preference graph" class="mood">
+         <p>Overall, the majority of users indicated a preference for homepage #2.</p>
+         </aside>
        </section>
    <!-- branding-->
   <section>
     <h2>Branding and Identity:</h2>
     <p>The overall style of MedChat is one that projects reliability, trustworthiness, and friendliness. As a patient-facing application,
-      we want consumers to feel comfortable while using our product. The first logo that I designed was an attempt to use the “M”
-      initial as the focal point of the logo. The second one I wanted to play off the fact that this was going to be primarily a messaging application,
-      and I wanted that reflected in the branding.
-      The third logo was a more abstract take on the messenger concept.  </p>
-    <img src="images/trove/trovesketch.png" alt="trove sketches" class="sketch">
-    <p>After receiving feedback, I decided to go with my second sketch.The base color used in most of MedChat’s products
-      is Sacred Blue (#049DD9). This blue can be used in various shades. This color is accented by a strong royal blue, called Patient Purple (#0D2EDF).
-       These colors convey a sense of calm and trustworthiness throughout the product.</p>
-    <img src="images/trove/moodboard1.png" alt="trove moodboard" class="mood">
-    <img src="images/trove/moodboard2.png" alt="trove moodboard" class="mood">
+      we want consumers to feel comfortable while using our product. In designing the logo, I drafted three different designs:  </p>
+    <img src="images/medchat/medchatlogosketch.jpg" alt="trove sketches" class="sketch">
+    <p>After receiving feedback, I decided to go with my second sketch.</p>
+    <img src="images/medchat/medchatlogo.png" alt="trove moodboard" class="busmockupimage">
      </section>
-  <!-- usability tests-->
-  <section>
-    <h2>Usability Tests:</h2>
-    <p>The first round of usability tests I ran provided valuable feedback about the overall functionality of the website. I conducted this test with three users.
-       Users said they would like to see where/how to add new templates, and if there are any more ways to move files aside from deleting them.
-       Also, a reviewer suggested combining the landing page, pricing into a single page. </p>
-    </section>
- <!-- high-fidelity mockups-->
+
+<!-- high-fidelity mockups-->
   <section class="mockups">
     <h2>Mockups:</h2>
     <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-    <img src="images/trove/mockup1.png" alt="mockup image" class="mockupimage">
-    <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
-     </section>
+    <img src="images/medchat/medchat3.png" alt="mockup image" class="medchatmockup">
+    <a href="https://invis.io/U2XQQ7PN9E8" target="_blank" class="button">View more</a>
+    </section>
+
+  <!-- usability tests-->
+  <div class="userflow">
+    <h2>Usability Tests:</h2>
+    <p>I conducted testing on my first round of high fidelity mockups using maze.design
+       to understand if there were any issues that needed to be addressed before moving forward.
+      </p>
+      <img src="images/medchat/maze_screenshot.jpg" alt="trove moodboard" class="user">
+      <img src="images/medchat/maze_screenshot2.jpg" alt="trove moodboard" class="user">
+      <img src="images/medchat/maze_screenshot3.jpg" alt="trove moodboard" class="user">
+      <br>
+      <p>I found that users were having trouble with navigating the log-in page and the inbox/messages.<br><br>
+        I decided that I needed to address these issues in my next version of the design.
+        </p>
+    </div>
 
   <!-- final project -->
   <section>
     <h2>Final Design:</h2>
     <br>
-    <img src="images/trove/landingpage.png" alt="trove landing page" class="trove_landing">
-    <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
+    <img src="images/Work/smartmockups_medchat1.png" alt="trove landing page" class="medchatmockup">
+    <a href="https://invis.io/FRXPC3YG5JC" target="_blank" class="button">View prototype</a>
   </section>
   <!-- conclusion -->
   <section>
@@ -227,7 +208,9 @@
     <p>Medchat offers users an intuitive application experience and provides an alternative to overcrowded and confusing homepages.
       Medchat presents an opportunity for providers and patients to benefit from easier communication. </p>
     </section>
-  </div>
+</div>
+
+
     <!-- connect with me -->
       <section class="connect">
         <br>
@@ -248,6 +231,7 @@
            </ul>
            <p>Designed and Developed by Imani Ricks 2020</p>
          </footer>
+       </div>
        <!-- button on scroll -->
            <script>
            //Get the button
