--- a/medchat.html
+++ b/medchat.html
@@ -166,10 +166,11 @@
   <section>
     <h2>Branding and Identity:</h2>
     <p>The overall style of MedChat is one that projects reliability, trustworthiness, and friendliness. As a patient-facing application,
-      we want consumers to feel comfortable while using our product. In designing the logo, I drafted three different designs:  </p>
-    <img src="images/medchat/medchatlogosketch.jpg" alt="trove sketches" class="sketch">
-    <p>After receiving feedback, I decided to go with my second sketch.</p>
-    <img src="images/medchat/medchatlogo.png" alt="trove moodboard" class="busmockupimage">
+      we want consumers to feel comfortable while using our product. </p>
+    <p>In designing the logo, I drafted three different designs:  </p>
+    <img src="images/medchat/medchatlogosketch.jpg" alt="sketches" class="medchatsketch">
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+    src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FPF2OyAvKRmBfRVEY2YUCK8%2FMedchat_style%3Fnode-id%3D0%253A1&chrome=DOCUMENTATION" allowfullscreen></iframe>
      </section>
 
 <!-- high-fidelity mockups-->
