--- a/medchat.html
+++ b/medchat.html
@@ -152,8 +152,8 @@
   <!-- preference testing -->
      <section class="userflow">
        <h2>Preference Tests:</h2>
-       <p>I conducted a preference test for three different elements in my design.
-         The first element was the background color for the log-in screen.</p>
+       <p>I conducted a preference test for three different homepage designs.
+         I was curious which layout users preferred.</p>
          <img src="images/medchat/Homepage1.png" alt="screen" class="user">
          <img src="images/medchat/Homepage2.png" alt="screen" class="user">
          <img src="images/medchat/Homepage3.png" alt="screen" class="user">
