--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        </section>
 <!-- Main section -->
     <div class="main">
-      
+
      <h3>My Work</h3>
      <div id="worksection" class="projects">
      <div class="project_content">
@@ -92,7 +92,7 @@
        </div>
      <div class="project_content">
       <aside class="medchat">
-        <a href="/medchat.html"><img src="images/medchat/medchatmockup1.svg" class="trovepic" alt="mockup"></a>
+        <a href="/medchat.html"><img src="images/medchatmockup1.svg" class="trovepic" alt="mockup"></a>
       </aside>
       </div>
      </div>
@@ -104,7 +104,7 @@
          <img class="design" src="images/meupclose.jpeg" alt="design process image">
           </aside>
          <div class="info_content">
-           <p>Welcome!<br> My name is Imani and I'm a Designer with a background in Psychology.
+           <p>Hey there! My name is Imani and I'm a UX Designer with a background in Psychology.
              My years of experience in mental health have contributed to my ability to
              to view design problems through a user-centered, empathetic lens. My passion is
              designing creative solutions for people by utilizing user research and ux best practices.
