--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
          <img class="design" src="images/meupclose.jpeg" alt="design process image">
           </aside>
          <div class="info_content">
-           <p>Hey there! My name is Imani and I'm a UX Designer with a background in Psychology.
+           <p>Hey there! My name is Imani and I'm a UX Designer with a background in <span class= "highlight">Psychology</span>.
              My years of experience in mental health have contributed to my ability to
-             to view design problems through a user-centered, empathetic lens. My passion is
+             to view design problems through a <span class= "highlight">user-centered, empathetic lens</span>. My passion is
              designing creative solutions for people by utilizing user research and ux best practices.
           </p>
             <a href="/about-me.html" class="button">More about me</a>
@@ -117,6 +117,12 @@
          <br>
          <br>
          <h3>My Design Process</h3>
+         <p>I approach design decisions using the agile method shown in the double-diamond
+         design method. This method allows me to use both <span class= "highlight">divergent</span> (broad, all-encompassing) thinking,
+         along with <span class= "highlight">convergent</span> (goal-specific, focused) thinking. The key steps in this process are
+         discovery, strategy, information architecture and visual design, and development and launch.</p>
+         <br>
+         <br>
          <aside class="designpic">
          <img class="design" src="images/designprocess.svg" alt="design process image">
           </aside>
