updated site design

--- a/about-me.html
+++ b/about-me.html
@@ -85,12 +85,14 @@
         far more effective if it stated “Pull Up” rather than “Ground Proximity”.
         This seemingly simple change in the design of these warning
          systems, based on user preferences, changed the airline industry forever.</blockquote>
-         <p>This story has stuck with me as <span class= "highlight">I’ve always been cognizant of how changes in design can greatly improve the human condition</span>.
+         <p>This story has stuck with me as I’ve always been cognizant of how changes in
+           design can greatly improve the human condition.
           Prior to making the decision to pursue UX design,
           and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries.
           I’ve held a variety of positions, including: restuarant manager, waitress, English
-          teacher, a social worker and therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I decided on a career in UX Design when I was struck by the fact that those I worked with were being
-          asked to use systems that were impractical for the tasks at hand. <span class= "highlight">I want to make designs for those in the trenches of our most vital industries and advocate for the user experience</span>.<br></p>
+          teacher, a social worker and therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I decided on a career in UX Design when
+          I was struck by the fact that those I worked with were being
+          asked to use systems that were impractical for the tasks at hand. I want to make designs for those in the trenches of our most vital industries and advocate for the user experience.<br></p>
 
     <h2>My skills:</h2>
     <ul class="skills">
