--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
     <br>
     <br>
     <br>
-    <img src="images/trove/troveblue.png" alt="trove mockup image" class="projecthero">
+    <img src="images/Work/smartmockups_kby2urq9.jpg" alt="trove mockup image" class="projecthero">
     <h3>Trove</h3>
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
