--- a/busybus.html
+++ b/busybus.html
@@ -69,7 +69,7 @@
     <br>
     <br>
     <br>
-    <img src="images/busybus/yellowbus.png" alt="mockup image" class="projecthero" >
+    <img src="images/Work/smartmockups_busybus.jpg" alt="mockup image" class="projecthero" >
     <h3>BusyBus</h3>
     <p>BusyBus is a mobile transportation application designed<br> to help users navigate over-complicated<br>transit systems.<p>
     <a href="https://irricks.github.io/Frontend-challenge/" target="_blank" class="button">View finished prototype</a>
@@ -114,7 +114,7 @@
        </section>
        <section class="busystyle">
          <h2>Branding and Identity:</h2>
-         <img src="images/BusyBusstyle.jpg" alt="branding">
+         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGoygPYN9lZmCV28797T0NU%2FBusyBus-moodboard%3Fnode-id%3D26%253A20&chrome=DOCUMENTATION" allowfullscreen></iframe>
           </section>
     <section class="usability">
       <h2>Usability Tests:</h2>
@@ -130,8 +130,8 @@
       <a href="https://www.dropbox.com/s/z190568mtl328cf/prototype3.png?dl=0" target="_blank" class="button">View more</a>
        </section>
     <section class="mockups">
-     <h2>High Fidelity Mockups Version 1:</h2>
-     <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
+     <h2>High Fidelity Mockups Version 2:</h2>
+     <p>I recieved feedback on my first version and made adjustments to include the provided data.xs</p>
      <img src="images/busybus/version2.png" alt="mockup image" class="busmockupimage">
      <a href="https://www.dropbox.com/s/lt37fwppvxk1bm6/image%20%284%29.png?dl=0" target="_blank" class="button">View more</a>
       </section>
