portfolio design overhaul
changed main design, font, images, colors, and spacing.

--- a/about-me.html
+++ b/about-me.html
@@ -80,29 +80,17 @@
   <div class="aboutmemain">
     <p>
       The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University
-      .<blockquote> The professor referenced a study researchers conducted on the warning systems
-        in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was
-        far more effective if it stated “Pull Up” rather than “Ground Proximity”.
-        This seemingly simple change in the design of these warning
-         systems, based on user preferences, changed the airline industry forever.</blockquote>
+      .<blockquote> The professor referenced a study where researchers found that the changing the airplane's disaster alert design to “Pull Up” rather than “Ground Proximity”
+        reduced the number of crashes experienced.</blockquote>
          <p>This story has stuck with me as I’ve always been cognizant of how changes in
            design can greatly improve the human condition.
           Prior to making the decision to pursue UX design,
-          and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries.
-          I’ve held a variety of positions, including: restuarant manager, waitress, English
-          teacher, a social worker and therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I decided on a career in UX Design when
-          I was struck by the fact that those I worked with were being
-          asked to use systems that were impractical for the tasks at hand. I want to make designs for those in the trenches of our most vital industries and advocate for the user experience.<br></p>
+          I devoted my time to working on the front lines of the food service, education and mental health industries.
+          My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I decided on a career in UX Design when
+          I was struck by the fact that those I worked with were being asked to
+           use systems that were impractical for the tasks at hand. I want to make designs for those in the trenches of our most vital industries and advocate for the user experience.<br></p>
 
-    <h2>My skills:</h2>
-    <ul class="skills">
-      <li>Surveys</li>
-      <li>Persona building</li>
-      <li>Wireframing</li>
-      <li>Journey Mapping</li>
-      <li>Prototyping</li>
-      <li>Color Theory & Typography</li>
-    </ul>
+
     <h2>My favorite tools:</h2>
     <ul class="tools">
       <li><i class="fab fa-figma fa-3x"></i></li>
