--- a/project.html
+++ b/project.html
@@ -72,13 +72,13 @@
     <br>
     <img src="images/Work/smartmockups_kby2urq9.jpg" alt="trove mockup image" class="projecthero">
     <h3>Trove</h3>
-    <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
+    <p>Trove is a cloud storage application that combines storage and organization with real-time collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
 
     <!-- summary and solution-->
   <div class="projectmain">
-    <section class="summary fade-scroll">
+    <section class="summary">
       <h2>Summary:</h2>
       <p>In the ever-expanding cloud storage marketplace, something was missing.
         Users wanted the ability to collaborate with each other in real-time on projects.
@@ -107,15 +107,15 @@
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-        <p >Google has many products to offer its users through its Drive platform.
+        <p><span class="bold">Google</span> has many products to offer its users through its Drive platform.
           They have built-in templates for surveys, documents, spreadsheets,
            and presentations. They also provide several tools for users to edit content with.</p>
            <img src="images/trove/googledrivre.png"  alt="google drive image" class="center"><br>
-        <br><p> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications.
+        <br><p> <span class="bold">Dropbox</span> is available on multiple platforms, iOS, Android, and Office 365 applications.
           The application also has the option of administration control for
          business users.</p>
          <img src="images/trove/dropbox.png"  alt="dropbox image" class="center"><br>
-         <br><p> Pinterest allows users to “Pin”
+         <br><p><span class="bold"> Pinterest</span> allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
           scrolling. </p>
           <img src="images/trove/pinterest.png"  alt="pinterest image" class="center"><br>
@@ -123,9 +123,7 @@
      </section>
     <section>
       <h2>User Personas:</h2>
-        <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
         <img src="images/trove/user2.png" alt="user persona image" class="center">
-        <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
         <img src="images/trove/user1.png" alt="user persona image" class="center">
        </section>
 
@@ -161,9 +159,6 @@
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. I started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br><br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="images/trove/trovesketch.png" alt="trove sketches" class="sketch">
-      <p>Once I knew I wanted to go in a treasure chest/nautical theme, I started to gather inspiration from around the web. Colors that are featured in the mood board (brown, orange, gold, blue
-         and teal) were the foundational pieces for the finished app.</p>
       <img src="images/trove/moodboard1.png" alt="trove moodboard" class="mood">
       <img src="images/trove/moodboard2.png" alt="trove moodboard" class="mood">
        </section>
