added survey img

--- a/busybus.html
+++ b/busybus.html
@@ -94,8 +94,7 @@
         Some key findings:Users appreciate having real time data, a location map, and viewing full schedules
         Users don’t appreciate unnecessary ads and unreliable notifications.</p>
         <aside>
-        <img src="images/busybus/bussurvey3.png" alt="user survey image">
-        <img src="images/busybus/bussurvey2.png" alt="user survey image">
+        <img src="images/bbsurvey.png" alt="user survey image">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
