--- a/medchat.html
+++ b/medchat.html
@@ -94,7 +94,7 @@
          how users felt about their current patient portal applications, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/medchat/medchatsurvey.svg" alt="user survey image" class="buscenter">
+        <img src="images/mcsurvey.png" alt="user survey image" class="buscenter">
         <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
