--- a/project.html
+++ b/project.html
@@ -101,7 +101,7 @@
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/trove/trovesurvey.png" alt="user survey image" class="center">
+        <img src="images/trsurvey.png" alt="user survey image" class="center">
         <a href="https://docs.google.com/spreadsheets/d/10zVRX0QJES3QO5b5i8qLSpEJfG0i6YERuytIaujhMF0/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
