updated the project pages
changes max width on case studies from 700px to 1000px
updated trove pics

--- a/project.html
+++ b/project.html
@@ -92,7 +92,7 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/trove/trovemockup.png" alt="trove mockup" class="center">
+      <img src="images/trovemockup1.png" alt="trove mockup" class="center">
       <br>
     </section>
     <!-- discovery -->
@@ -140,9 +140,8 @@
     <div class="userflow">
       <h2>User Flows:</h2>
         <br>
-        <img src="images/trove/userflow1.png" alt="user flows image" class="user">
-        <img src="images/trove/userflow2.png" alt="user flows image" class="user">
-        <img src="images/trove/userflow3.png" alt="user flows image" class="user">
+        <img src="images/trove/userflow1.png" alt="user flows image" class="troveuser">
+        <img src="images/trove/userflow2.png" alt="user flows image" class="troveuser">
           </div>
     <div>
         <a href="https://paper.dropbox.com/doc/User-Flows-2--AzATkSmnmO6PDH21JKlk~FRZAQ-hAYhkSMHhNcfglCncnUa8" target="_blank" class="button">View more</a>
@@ -150,8 +149,6 @@
     <section class="wireframes">
       <h2>Sketches and Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
-      <img src="images/trove/trove_sketch1.jpg" alt="wireframe image" class="wireframeimage">
-      <img src="images/trove/trove_sketch2.jpg" alt="wireframe image" class="wireframeimage">
       <img src="images/trove/wireframe2.png" alt="wireframe image" class="wireframeimage">
       <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
