invision link update

--- a/busybus.html
+++ b/busybus.html
@@ -59,7 +59,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html#worksection">Work</a></li>
+        <li><a class="active" id="work" href="/index.html#worksection">Work</a></li>
       </ul>
     </div>
    </nav>
