--- a/medchat.html
+++ b/medchat.html
@@ -59,7 +59,7 @@
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html#worksection">Work</a></li>
+        <li><a class="active" id="work" href="/index.html#worksection">Work</a></li>
       </ul>
     </div>
    </nav>
@@ -73,7 +73,7 @@
     <h3>MedChat summary</h3>
     <p>My goal was to take the current patient portal applications on the market,
       and redesign them to create a more user friendly experience.<p>
-    <a href="https://invis.io/FRXPC3YG5JC" target="_blank" class="button">View finished prototype</a>
+    <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- problem and solution-->
   <div class="projectmain">
@@ -114,7 +114,7 @@
         <h2>User Personas:</h2>
           <p>I was able to craft user personas based on the information gathered in the survey. Demographically,
             the respondents were majority female (80%), and aged between 25-54 (80%).
-           </p>    
+           </p>
           <img src="images/medchat/user1.png" alt="user persona image" class="center">
           <img src="images/medchat/user2.png" alt="user persona image" class="center">
           <img src="images/medchat/user3.png" alt="user persona image" class="center">
@@ -196,7 +196,7 @@
     <h2>Final Design:</h2>
     <br>
     <img src="images/Work/smartmockups_medchat1.png" alt="trove landing page" class="medchatmockup">
-    <a href="https://invis.io/FRXPC3YG5JC" target="_blank" class="button">View prototype</a>
+    <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View prototype</a>
   </section>
   <!-- conclusion -->
   <section>
